# txt-to-json

./: .gitignore  Cargo.toml  README.md  example.eva
examples/: invalid_duplicate_meta_key.eva  invalid_formula.eva  invalid_unknown_section.eva  invalid_unknown_variable.eva
src/: ast.rs  builder.rs  error.rs  lexer.rs  main.rs  parser.rs  validator.rs
tests/: cli.rs
